# otto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  otto-ascii.txt  otto.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-1-report.md
crates/otto-agent/: Cargo.toml
crates/otto-agent/assets/: plan.txt
crates/otto-agent/src/: agent.rs  builtins.rs  config.rs  lib.rs  subagent.rs
crates/otto-app/: Cargo.toml
crates/otto-app/src/: lib.rs  route_factory.rs  runtime.rs  title.rs  vertex_auth.rs
crates/otto-app/tests/: runtime.rs
crates/otto-auth/: Cargo.toml
crates/otto-auth/src/: credential.rs  error.rs  lib.rs  pkce.rs  store.rs  util.rs
crates/otto-auth/src/providers/: anthropic.rs  api_key.rs  copilot.rs  mod.rs
crates/otto-auth/tests/: anthropic.rs  copilot.rs  credential.rs  pkce.rs  resolve.rs  store.rs
crates/otto-cli/: Cargo.toml
crates/otto-cli/src/: cli.rs  commands.rs  lib.rs  logging.rs  main.rs  render.rs  run.rs  workflow.rs
crates/otto-cli/tests/: cli_parse.rs  commands.rs  run_session.rs
crates/otto-config/: Cargo.toml
crates/otto-config/examples/: gen_schema.rs
crates/otto-config/src/: error.rs  lib.rs  loader.rs  paths.rs  schema.rs
crates/otto-config/tests/: config.rs
crates/otto-events/: Cargo.toml
crates/otto-events/src/: bus.rs  event.rs  lib.rs  usage.rs
crates/otto-events/tests/: events.rs
crates/otto-hooks/: Cargo.toml
crates/otto-hooks/src/: config.rs  event.rs  lib.rs  runner.rs
crates/otto-id/: Cargo.toml
crates/otto-id/src/: lib.rs
crates/otto-llm/: Cargo.toml
crates/otto-llm/assets/: models.json
crates/otto-llm/src/: auth.rs  client.rs  error.rs  lib.rs  message.rs  model.rs  models_dev.rs  protocol.rs  registry.rs  request.rs  response.rs  route.rs
crates/otto-llm/src/protocols/: anthropic_messages.rs  bedrock_converse.rs  copilot_cache.rs  gemini.rs  mod.rs  openai_chat.rs  openai_compatible.rs  openai_responses.rs
crates/otto-llm/src/protocols/utils/: gemini_tool_schema.rs  lifecycle.rs  mod.rs  sigv4.rs  tool_stream.rs
crates/otto-llm/src/providers/: anthropic.rs  azure.rs  bedrock.rs  copilot.rs  google.rs  mod.rs  openai.rs  openai_compatible.rs  vertex.rs
crates/otto-llm/src/transport/: aws_event_stream.rs  bedrock.rs  mod.rs  sse.rs
crates/otto-llm/tests/: e2e_http.rs  mock_protocol.rs  models_load.rs  providers.rs
crates/otto-llm/tests/fixtures/: models_dev_sample.json
crates/otto-lsp/: Cargo.toml
crates/otto-lsp/src/: client.rs  config.rs  framing.rs  lib.rs  protocol.rs  registry.rs  report.rs  service.rs  transport.rs
crates/otto-lsp/tests/: client_handshake.rs  live.rs  service.rs
crates/otto-mcp/: Cargo.toml
crates/otto-mcp/src/: client.rs  config.rs  lib.rs  tool.rs
crates/otto-mcp/tests/: in_process.rs
crates/otto-permission/: Cargo.toml
crates/otto-permission/src/: gate.rs  lib.rs  mode.rs  permission.rs  ruleset.rs  wildcard.rs
crates/otto-permission/tests/: gate.rs
crates/otto-question/: Cargo.toml
crates/otto-question/src/: gate.rs  lib.rs  question.rs
crates/otto-server/: Cargo.toml
crates/otto-server/src/: attach.rs  find.rs  lib.rs
crates/otto-server/tests/: server.rs  worktree.rs
crates/otto-session/: Cargo.toml
crates/otto-session/src/: compaction.rs  convert.rs  lib.rs  overflow.rs  processor.rs  retry.rs  run.rs  run_state.rs  runtime.rs  subagent.rs  system.rs  warm.rs
crates/otto-session/tests/: compaction.rs  convert.rs  mcp_loop.rs  processor.rs  run_loop.rs  subagent.rs  system.rs
crates/otto-storage/: Cargo.toml
crates/otto-storage/src/: lib.rs  message.rs  model.rs  store.rs
crates/otto-storage/tests/: derivations.rs  model.rs  store.rs
crates/otto-tools/: Cargo.toml
crates/otto-tools/descriptions/: bash.txt  skill.txt  websearch.txt
crates/otto-tools/src/: hook.rs  hook_escalation.rs  lib.rs  lsp.rs  patch.rs  registry.rs  subagent.rs  tool.rs  truncate.rs
crates/otto-tools/src/hooks/: mod.rs  rtk.rs
crates/otto-tools/src/tools/: apply_patch.rs  bash.rs  edit.rs  glob.rs  grep.rs  invalid.rs  mod.rs  parallel_walk.rs  question.rs  read.rs  skill.rs  task.rs  todo.rs  webfetch.rs  websearch.rs  write.rs
crates/otto-tui/: Cargo.toml
crates/otto-tui/src/: client.rs  input.rs  lib.rs  narration.rs  spawn.rs  splash.rs  splash_art.txt  sse.rs  state.rs  theme.rs  view.rs
crates/otto-tui/src/appearance/: mod.rs  os_theme.rs
crates/otto-tui/src/render/: diff.rs  highlight.rs  markdown.rs  mod.rs  tool.rs
crates/otto-tui/tests/: client_e2e.rs  harness.rs  loop_smoke.rs
crates/otto-vcs/: Cargo.toml
crates/otto-vcs/src/: files.rs  git.rs  lib.rs  worktree.rs
crates/otto-workflow/: Cargo.toml
crates/otto-workflow/src/: classify.rs  ctx.rs  error.rs  gate.rs  judge.rs  ledger.rs  lib.rs  plan.rs  regression.rs  runner.rs  sdd.rs  tdd.rs  verify.rs
docs/: README.md  getting-started.md
docs/dev/: architecture.md  contributing.md
docs/guide/: cli.md  permissions.md  providers.md  tui.md  workflows.md
docs/reference/: agents.md  cli.md  config.md  env.md  http-api.md  tools.md
schema/: config.json
