[workspace]
resolver = "3"
members = [
    "crates/otto-id",
    "crates/otto-events",
    "crates/otto-llm",
    "crates/otto-tools",
    "crates/otto-storage",
    "crates/otto-session",
    "crates/otto-permission",
    "crates/otto-agent",
    "crates/otto-config",
    "crates/otto-auth",
    "crates/otto-mcp",
    "crates/otto-lsp",
    "crates/otto-vcs",
    "crates/otto-workflow",
    "crates/otto-app",
    "crates/otto-server",
    "crates/otto-cli",
    "crates/otto-tui",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/sirhco/otto"
rust-version = "1.95"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
otto-events = { path = "crates/otto-events" }
otto-id = { path = "crates/otto-id" }
otto-llm = { path = "crates/otto-llm" }
otto-tools = { path = "crates/otto-tools" }
otto-storage = { path = "crates/otto-storage" }
otto-permission = { path = "crates/otto-permission" }
otto-agent = { path = "crates/otto-agent" }
otto-mcp = { path = "crates/otto-mcp" }
otto-lsp = { path = "crates/otto-lsp" }
otto-config = { path = "crates/otto-config" }
otto-auth = { path = "crates/otto-auth" }
otto-session = { path = "crates/otto-session" }
otto-app = { path = "crates/otto-app" }
otto-server = { path = "crates/otto-server" }
otto-vcs = { path = "crates/otto-vcs" }
otto-workflow = { path = "crates/otto-workflow" }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
async-trait = "0.1"
tokio-util = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tempfile = "3"
wiremock = "0.6"
dirs = "5"
jsonc-parser = "0.26"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
url = "2"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
libc = "0.2"
unicode-width = "0.2"

[profile.release]
lto = "thin"
