[package]
name = "otto-auth"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
dirs.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock = "0.6"
