[package]
name = "otto-config"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
jsonc-parser = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true
