[package]
name = "otto-hooks"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
otto-id.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
