[package]
name = "otto-llm"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
otto-events.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
async-stream.workspace = true
bytes.workspace = true
sha2.workspace = true
hmac.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
tokio.workspace = true
futures.workspace = true
