[package]
name = "otto-llm"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
otto-events.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
async-stream.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
# `test-util` for `start_paused` in the frame-watchdog timeout tests.
tokio = { workspace = true, features = ["test-util"] }
futures.workspace = true
