[package]
name = "otto-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
otto-config = { workspace = true }
otto-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Self dev-dependency so integration tests under `tests/` can reach
# `#[cfg(any(test, feature = "test-support"))]`-gated helpers (e.g.
# `Lsp::insert_client_for_test`) that must stay out of the crate's normal public
# surface for real consumers.
otto-lsp = { path = ".", features = ["test-support"] }

[features]
test-support = []
