[package]
name = "otto-storage"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
otto-id.workspace = true
otto-events.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
sqlx.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
