[package]
name = "otto-tools"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
otto-id.workspace = true
otto-events.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
ignore = "0.4"
globset = "0.4"
regex = "1"
similar = "2"
reqwest.workspace = true
html2md = "0.2"

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock = "0.6"
