[package]
name = "otto-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
otto-events.workspace = true
otto-app.workspace = true
otto-server.workspace = true
otto-agent.workspace = true
otto-llm.workspace = true
ratatui.workspace = true
crossterm.workspace = true
reqwest.workspace = true
tokio.workspace = true
base64.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
axum.workspace = true
similar = "2"
pulldown-cmark.workspace = true
syntect.workspace = true
unicode-width.workspace = true
otto-config.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
async-trait.workspace = true
otto-tools.workspace = true
tempfile.workspace = true
